完成登录界面

--- a/src/main/resources/templates/backend_manage/login/index.html
+++ b/src/main/resources/templates/backend_manage/login/index.html
@@ -32,18 +32,12 @@
 							<div class="zyl_login_cont"></div>
 						</div>
 						<div>
-							<img src="img/carousel/01.jpg" />
-						</div>
-						<div>
 							<div class="background">
 								<span></span><span></span><span></span>
 								<span></span><span></span><span></span>
 								<span></span><span></span><span></span>
 								<span></span><span></span><span></span>
 							</div>
-						</div>
-						<div>
-							<img src="img/carousel/03.jpg" />
 						</div>
 					</div>
 				</div>
@@ -54,7 +48,7 @@
 		<!-- Footer -->
 		<div class="layui-row">
 			<div class="layui-col-sm12 layui-col-md12 zyl_center zyl_mar_01">
-				© 2019 - 简约后台登陆界面 || 简约后台登陆界面版权所有
+				© 2020 - 图书管理系统后台登陆界面
 			</div>
 		</div>
 		<!-- Footer End -->
@@ -76,7 +70,7 @@
 					</div>
 					<div class="layui-col-sm12 layui-col-md12">
 						<div class="layui-form-item">
-							<input type="password" name="nuse" lay-verify="required|pass" autocomplete="off" placeholder="密码" class="layui-input">
+							<input type="password" name="password" lay-verify="required|pass" autocomplete="off" placeholder="密码" class="layui-input">
 							<i class="layui-icon layui-icon-password zyl_lofo_icon"></i>
 						</div>
 					</div>
