添加登录成功跳转页面

--- a/src/main/resources/templates/backend_manage/login/index.html
+++ b/src/main/resources/templates/backend_manage/login/index.html
@@ -133,7 +133,8 @@
 				form.on('submit(demo1)', function(data){
 					layer.alert(JSON.stringify(data.field),{
 						title: '最终的提交信息'
-					})
+					});
+					location.href="http://localhost:10086/backend/index";
 					return false;
 				});
 				
