后台管理系统主页的头部布局及静态资源

--- a/src/main/resources/templates/backend_manage/home/index.html
+++ b/src/main/resources/templates/backend_manage/home/index.html
@@ -3,8 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>图书管理系统后台管理系统-主页</title>
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" href="/layui/css/layui.css" media="all"/>
+    <link rel="stylesheet" href="/css/backend_index.css" media="all"/>
 </head>
 <body>
-图书管理系统后台管理系统-主页
+<div class="layui-fluid">
+    <div class="head">
+        <div class="layui-row head-options">
+            <div class="layui-col-xs10">
+                <div class="layui-row layui-col-space5">
+                    <div class="layui-col-md3 head-log">
+                        <img src="/img/logo.jpg" alt="系统logo">
+                    </div>
+                    <div class="layui-col-md9">
+                        <h1>图书管理系统后台管理系统</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="layui-col-xs2">
+                <div class="grid-demo">6/12</div>
+            </div>
+        </div>
+        <div class="layui-row head-labels">
+
+        </div>
+    </div>
+</div>
+
+<!-- Jquery Js -->
+<script type="text/javascript" src="/js/jquery.min.js"></script>
+<!-- Layui Js -->
+<script type="text/javascript" src="/layui/layui.js"></script>
 </body>
 </html>
