--- a/src/main/resources/templates/backend_manage/home/index.html
+++ b/src/main/resources/templates/backend_manage/home/index.html
@@ -24,11 +24,12 @@
                 </div>
             </div>
             <div class="layui-col-xs2">
-                <div class="grid-demo">6/12</div>
+                <div class="head-user">
+                    <span>当前用户：超级管理员</span>
+                </div>
             </div>
         </div>
         <div class="layui-row head-labels">
-
         </div>
     </div>
 </div>
