后台管理系统主页搭建完毕，并能成功链接

--- a/src/main/resources/static/css/backend_index.css
+++ b/src/main/resources/static/css/backend_index.css
@@ -56,11 +56,14 @@
     background: #e5f4f1;
 }
 
-.content {
+#my-content {
+    /*border: 0;*/
+    width: 100%;
+    height: 550px;
 }
 
 /* 覆盖layui选中选项卡的css */
 .layui-this {
-    color: #fff;
-    background: red;
+    color: #fff !important;
+    background: #2b542c;
 }
