--- a/src/main/resources/templates/backend_manage/home/index.html
+++ b/src/main/resources/templates/backend_manage/home/index.html
@@ -6,6 +6,7 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="icon" type="image/png" sizes="144x144" href="/img/icon/tushu.png"/>
     <link rel="stylesheet" href="/layui/css/layui.css" media="all"/>
     <link rel="stylesheet" href="/css/backend_index.css" media="all"/>
 </head>
