--- a/src/main/resources/templates/backend_manage/login/index.html
+++ b/src/main/resources/templates/backend_manage/login/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>图书管理系统·登陆</title>
+    <link rel="icon" type="image/png" sizes="144x144" href="/img/icon/tushu.png"/>
     <link rel="stylesheet" href="/layui/css/layui.css" media="all"/>
     <link rel="stylesheet" href="/css/login.css" media="all"/>
     <style>
